--- a/public/locator.html
+++ b/public/locator.html
@@ -46,7 +46,7 @@
   </div>
   <script src="scripts/locator.js"></script>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?callback=initialize">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASaVv5F2ojmPhICMUupV2ICuIxnOCGmXE&callback=initialize">
   </script>
 </body>
 
