use geometry library to compute distance

--- a/public/locator.html
+++ b/public/locator.html
@@ -34,7 +34,7 @@
   </div>
   <script src="scripts/locator.js"></script>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASaVv5F2ojmPhICMUupV2ICuIxnOCGmXE&callback=initialize">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASaVv5F2ojmPhICMUupV2ICuIxnOCGmXE&libraries=geometry&callback=initialize">
   </script>
 </body>
 
