basic support for random locations

--- a/public/locator.html
+++ b/public/locator.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div id="main-container" class="container">
+  <div id="main-container" class="container" hidden>
     <div id="panorama"></div>
     <div id="mini-map" class="control">
       <div id="map"></div>
@@ -32,6 +32,7 @@
       <div id="result-map"></div>
     </div>
   </div>
+  <script src="scripts/random.js"></script>
   <script src="scripts/locator.js"></script>
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASaVv5F2ojmPhICMUupV2ICuIxnOCGmXE&libraries=geometry&callback=initialize">
