extended random location whitelist

--- a/public/locator.html
+++ b/public/locator.html
@@ -32,6 +32,7 @@
       <div id="result-map"></div>
     </div>
   </div>
+  <script src="scripts/anchors.js"></script>
   <script src="scripts/random.js"></script>
   <script src="scripts/locator.js"></script>
   <script async defer
